--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "postinstall": "flowbite-react patch"
   },
   "dependencies": {
+    "axios": "^1.11.0",
     "flowbite-react": "^0.11.8",
     "mssql": "^11.0.1",
     "react": "^19.1.0",
